<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.example.opilane.login.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:id="@+id/profile_pic"
        android:scaleType="fitCenter"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilt"
        android:id="@+id/btnTeePilt"/>
    <EditText
        android:id="@+id/eesNimi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/eesnimi"
        android:textColorHint="@color/colorAccent"/>
    <EditText
        android:id="@+id/pereNimi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/perenimi"
        android:textColorHint="@color/colorAccent"/>
    <EditText
        android:id="@+id/epost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/colorAccent"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/colorAccent"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegistreeri"
        android:text="@string/registreeri"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>
