<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.example.opilane.login.UserProfileActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:id="@+id/profile_pic"
        android:scaleType="centerInside"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/eesnimi"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/profiilEesNimi"
                android:textAppearance="?android:textAppearanceMedium"
                android:textAllCaps="true"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/perenimi"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/profiilPerekonnaNimi"
                android:textAppearance="?android:textAppearanceMedium"
                android:textStyle="bold"
                android:textAllCaps="true"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/email"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/profiilEpost"
                android:textAppearance="?android:textAppearanceMedium"
                android:textAllCaps="true"
                android:textStyle="bold"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
